# space-engineers-calculator

./: .editorconfig  .env  .gitignore  CHANGELOG.md  CNAME  Cargo.toml  Common.ps1  README.md  Trunk.toml  build_wasm.ps1  index.html  release.toml  secalc_gui.js
.cargo/: config.toml
.github/workflows/: build.yml  ci.yml  deploy.yml  release.yml
.run/: B all.run.xml  B gui [wasm].run.xml  B gui.run.xml  B gui_egui [wasm].run.xml  B gui_egui.run.xml  B gui_iced [wasm].run.xml  B gui_iced.run.xml  Cargo update.run.xml  D gui_iced.run.xml  R cli.run.xml  R gui [wasm].run.xml  R gui.run.xml  R gui_egui [wasm].run.xml  R gui_egui.run.xml  R gui_iced [wasm].run.xml  R gui_iced.run.xml  Rel gui.run.xml
code/cli/: Cargo.toml
code/cli/src/: main.rs
code/core/: Cargo.toml
code/core/src/: error.rs  lib.rs  xml.rs
code/core/src/calc/: mod.rs
code/core/src/data/: blocks.rs  components.rs  extract.rs  gas_properties.rs  localization.rs  mod.rs  mods.rs  xml.rs
code/core/src/data/blocks/: extract.rs  mod.rs
code/core/src/grid/: duration.rs  mod.rs
code/gui/: Cargo.toml
code/gui/src/: main.rs  widget.rs
code/gui/src/app/: calculator.rs  mod.rs  result.rs  save_load.rs  settings.rs  window.rs
code/gui/web/: index.html  style.css
code/gui_egui/: Cargo.toml
code/gui_egui/src/: app.rs  main.rs  widget.rs
code/gui_egui/src/app/: calculator.rs  mod.rs  result.rs  save_load.rs  settings.rs
code/gui_egui/web/: build.ps1  index.html  style.css
code/gui_gtk/: Cargo.toml
code/gui_gtk/src/gui/: dialog.rs  main_window.rs  mod.rs
code/gui_iced/: Cargo.toml
code/gui_iced/src/: app.rs  block_input.rs  data_bind.rs  directional_block_input.rs  main.rs  option_input.rs  storage.rs  util.rs  view.rs  widget.rs
code/gui_iced/src/page/: load.rs  load_confirm_discard.rs  main.rs  mod.rs  save_as.rs  save_overwrite_confirm.rs
code/gui_iced/src/page/grid_calc/: block_input.rs  directional_block_input.rs  mod.rs  option_input.rs
code/gui_iced/web/: index.html
code/web_app/: Cargo.toml
code/web_app/src/: main.rs
core/cli/: Cargo.toml
core/cli/src/: main.rs
core/core/src/: lib.rs
core/gui_gtk/src/: main.rs
data/: data.json  extract_config.ron
grids/: bfr.grid.json  bfr.secalc  overdrill.grid.json  quadent.grid.json  quadent.secalc  roestbak.grid.json  rothoor.grid.json  square.grid.json  storm.grid.json  walter.grid.json
package/cli/: Cargo.toml
package/cli/src/: main.rs
package/core/: Cargo.toml
package/core/src/: error.rs  lib.rs  xml.rs
package/core/src/data/: components.rs  gas_properties.rs  localization.rs  mod.rs  mods.rs
package/core/src/data/blocks/: extract.rs  mod.rs
package/core/src/grid/: direction.rs
package/gui/: .gitignore  Cargo.toml  index.html
package/gui/src/: main.rs  widget.rs
package/gui/src/app/: calculator.rs  mod.rs  save_load.rs  window.rs
src/: blocks.rs  components.rs  error.rs  gas_properties.rs  localization.rs  main.rs  xml.rs
src/calc/: mod.rs
src/data/: blocks.rs  components.rs  gas_properties.rs  localization.rs  mod.rs  xml.rs
src/gui/: dialog.rs  file_dialog.rs  main_window.glade  main_window.rs  mod.rs
wasm_out/: secalc_gui.js
web/: .gitignore  build.bat  build_rel.bat  index.html  serve.bat  serve.py  watch.bat
