cargo-features = ["named-profiles", "profile-overrides"]

[workspace]
members = [
    "code/*",
]
default-members = [
    "code/*",
]
resolver = "2"


[patch.crates-io]
#egui = { git = "https://github.com/emilk/egui", branch = "master" }
#eframe = { git = "https://github.com/emilk/egui", branch = "master" }
#egui_extras = { git = "https://github.com/emilk/egui", branch = "master" }
