cargo-features = ["named-profiles", "profile-overrides"]

[workspace]
members = [
  "package/*",
]
default-members = [
  "package/*",
]
resolver = "2"

[workspace.package]
version = "0.2.0"
authors = ["Gabriel Konat <gabrielkonat@gmail.com>"]
edition = "2021"
repository = "https://github.com/Gohla/space-engineers-calculator"
license = "Apache-2.0"
publish = false

[workspace.dependencies]
secalc_core = { path = "package/core" }
serde = "1"
dotenvy = "0.15"
