[package]
name = "secalc_cli"
version = "0.1.0"
authors = ["Gabriel Konat <gabrielkonat@gmail.com>"]
edition = "2021"

[dependencies]
secalc_core = { path = "../core", features = ["extract"] }
clap = { version = "4", features = ["derive", "env"] }
steamlocate = "2.0.0-alpha.0"
ron = "0.8"
dotenv = "0.15"
anyhow = "1"
