[package]
name = "secalc_core"
version = "0.1.0"
authors = ["Gabriel Konat <gabrielkonat@gmail.com>"]
edition = "2021"

[dependencies]
thiserror = "1.0"
walkdir = "2.2"
roxmltree = "0.14"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
linked-hash-map = { version = "0.5", features = ["serde_impl"] }
regex = "1"
