[package]
name = "secalc_core"
version = "0.1.0"
authors = ["Gabriel Konat <gabrielkonat@gmail.com>"]
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
linked-hash-map = { version = "0.5", features = ["serde_impl"] }
thiserror = "1"
walkdir = { version = "2.2", optional = true }
roxmltree = { version = "0.14", optional = true }
regex = { version = "1", optional = true }
alphanumeric-sort = { version = "1", optional = true }

[features]
default = []
extract = ["dep:walkdir", "dep:roxmltree", "dep:regex", "dep:alphanumeric-sort"]
