[package]
name = "secalc_gui"
version = "0.1.0"
authors = ["Gabriel Konat <gabrielkonat@gmail.com>"]
edition = "2021"

[dependencies]
secalc_core = { path = "../core" }
egui = "0.19"
egui_extras = "0.19"
eframe = { version = "0.19", features = ["persistence"] }
thousands = "0.2"
serde = { version = "1", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "registry"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1"
tracing-wasm = "0.2"
web-sys = { version = "0.3", features = ["Document", "HtmlHeadElement", "HtmlLinkElement"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
dotenv = "0.15"
