[package]
name = "secalc_gui_gtk"
version = "0.1.0"
authors = ["Gabriel Konat <gabrielkonat@gmail.com>"]
edition = "2018"

[dependencies]
secalc_core = { path = "../core" }
snafu = "0.6"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"

[dependencies.gtk]
version = "0.8"
features = ["v3_22"]

[dependencies.gio]
version = ""
features = ["v2_44"]

[dependencies.glib]
version = ""

[dependencies.gdk]
version = ""

[dependencies.gtk-sys]
version = ""
