[package]
name = "secalc_gui_iced"
version = "0.1.0"
authors = ["Gabriel Konat <gabrielkonat@gmail.com>"]
edition = "2018"

[dependencies]
secalc_core = { path = "../core" }
snafu = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
iced = { git = 'https://github.com/hecrj/iced.git', branch = 'master' }
