[package]
name = "secalc_gui_iced"
version = "0.1.0"
authors = ["Gabriel Konat <gabrielkonat@gmail.com>"]
edition = "2018"

[dependencies]
secalc_core = { path = "../core" }
iced = { git = 'https://github.com/Gohla/iced.git', branch = 'master' }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
linked-hash-map = "0.5"
thiserror = "1.0"
anyhow = "1.0"
log = "0.4"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
dirs = "2.0"
simple_logger = "1.3"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
console_log = "0.1"

[target.'cfg(target_arch = "wasm32")'.dependencies.web-sys]
version = "0.3"
features = [
  'console',
  'Storage',
  'Window',
]
