[package]
name = "secalc_gui_iced"
version = "0.1.0"
authors = ["Gabriel Konat <gabrielkonat@gmail.com>"]
edition = "2018"

[dependencies]
secalc_core = { path = "../core" }
iced = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
linked-hash-map = "0.5"
thiserror = "1.0"
anyhow = "1.0"
log = "0.4"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
dirs = "4"
simple_logger = "2"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
console_log = "0.2"

[target.'cfg(target_arch = "wasm32")'.dependencies.web-sys]
version = "0.3"
features = [
  'console',
  'Storage',
  'Window',
]
