[package]
name = "secalc_core"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = "1"
linked-hash-map = { version = "0.5", features = ["serde_impl"] }
thiserror = "1"
walkdir = { version = "2", optional = true }
roxmltree = { version = "0.18", optional = true }
regex = { version = "1", optional = true }
alphanumeric-sort = { version = "1", optional = true }

[build-dependencies]
rustversion = "1"

[features]
default = []
extract = ["dep:walkdir", "dep:roxmltree", "dep:regex", "dep:alphanumeric-sort"]
nightly = []
