[package]
name = "secalc_gui"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
secalc_core.workspace = true
egui = "0.25"
egui_extras = "0.25"
eframe = { version = "0.25", features = ["persistence"] }
thousands = "0.2"
serde = { workspace = true, features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "registry"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
dotenvy.workspace = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1"
tracing-wasm = "0.2"
wasm-bindgen-futures = "0.4"
